--- a/style.css
+++ b/style.css
@@ -1,60 +1,26 @@
-/* Définition des polices personnalisées */
-
-@font-face
-{
-    font-family: 'BallparkWeiner';
-    src: url('polices/ballpark.eot');
-    src: url('polices/ballpark.eot?#iefix') format('embedded-opentype'),
-         url('polices/ballpark.woff') format('woff'),
-         url('polices/ballpark.ttf') format('truetype'),
-         url('polices/ballpark.svg#BallparkWeiner') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face
-{
-    font-family: 'Dayrom';
-    src: url('polices/dayrom.eot');
-    src: url('polices/dayrom.eot?#iefix') format('embedded-opentype'),
-         url('polices/dayrom.woff') format('woff'),
-         url('polices/dayrom.ttf') format('truetype'),
-         url('polices/dayrom.svg#Dayrom') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-/* Eléments principaux de la page */
-
 body
 {
     background: url('fond.jpg');
-    font-family: 'Trebuchet MS', Arial, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #181818;
 }
 
 #bloc_page
 {
-    width: 900px;
-    margin: auto;
+    width: flex;
+    height: flex;
+    margin-top: 145px;
+    margin-bottom: 150px;
+    margin-left: 139px;
+    margin-right: 140px;
     background-color: #ffffff;
-}
-
-section h1, footer h1, nav a
-{
-    font-family: Dayrom, serif;
-    font-weight: normal;
-    text-transform: uppercase;
 }
 
 /* Header */
 
 header
 {
-    background: url('images/separateur.png') repeat-x bottom;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
 }
 
 #titre_principal
@@ -78,22 +44,28 @@ header
 
 header h1
 {
-    font-family: 'BallparkWeiner', serif;
-    font-size: 2.5em;
-    font-weight: normal;
-    margin: 0 0 0 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 3em;
+    font-weight: bold;
+    margin: 20px 0 0 70px;
 }
 
 header h2
 {
-    font-family: Dayrom, serif;
-    font-size: 1.1em;
-    margin-top: 0px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.75em;
+    margin: 10px 0 0 175px;
     font-weight: normal;
 }
 
 
 /* Navigation */
+
+nav{
+    margin-left: auto;
+    margin-right 0px;
+    margin-top: 20px;
+}
 
 nav ul
 {
@@ -103,7 +75,7 @@ nav ul
 
 nav li
 {
-    margin-right: 15px;
+    margin-right: 30px;
 }
 
 nav a
@@ -120,55 +92,6 @@ nav a:hover
     border-bottom: 3px solid #760001;
 }
 
-
-/* Bannière */
-
-#banniere_image
-{
-    margin-top: 15px;
-    height: 200px;
-    border-radius: 5px;
-    background: url('images/sanfrancisco.jpg') no-repeat;
-    position: relative;
-    box-shadow: 0px 4px 4px #1c1a19;
-    margin-bottom: 25px;
-}
-
-#banniere_description
-{
-    position: absolute;
-    bottom: 0;
-    border-radius: 0px 0px 5px 5px;
-    width: 99.5%;
-    height: 33px;
-    padding-top: 15px;
-    padding-left: 4px;
-    background-color: rgba(24,24,24,0.8);
-    color: white;
-    font-size: 0.8em;
-    
-}
-
-.bouton_rouge
-{
-    height: 25px;
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
-    background: url('images/fond_degraderouge.png') repeat-x;
-    border: 1px solid #760001;
-    border-radius: 5px;
-    font-size: 1.2em;
-    text-align: center;
-    padding: 3px 8px 0px 8px;
-    color: white;
-    text-decoration: none;
-}
-
-.bouton_rouge img
-{
-    border: 0;
-}
 
 
 
@@ -187,7 +110,7 @@ article, aside
 
 article
 {
-    margin-right: 20px;
+    margin: 20px 20px 0px 20px;
     flex: 3;
 }
 
@@ -204,9 +127,11 @@ article p
 
 aside
 {
+    margin-right: 20px;
+    margin-bottom: 20px;
     flex: 1.2;
     position: relative;
-    background-color: #706b64;
+    background-color: #ff9500;
     box-shadow: 0px 2px 5px #1c1a19;
     border-radius: 5px;
     padding: 10px;
