--- a/style.css
+++ b/style.css
@@ -92,8 +92,10 @@ nav a:hover
     border-bottom: 3px solid #760001;
 }
 
-
-
+.actuel{
+    border-bottom: 3px solid #ff9500;
+    pointer-events: none;
+}
 
 /* Corps */
 
@@ -112,6 +114,7 @@ article
 {
     margin: 20px 20px 0px 20px;
     flex: 3;
+    font-size: 20px;
 }
 
 .ico_categorie
@@ -161,6 +164,10 @@ aside img
     margin-right: 5px;
 }
 
+.link{
+    color: #fff;
+    text-decoration: none;
+}
 
 /* Footer */
 
